--- a/src/components/AboutSection.css
+++ b/src/components/AboutSection.css
@@ -167,6 +167,7 @@
   cursor: pointer;
   margin-top: 20px;
   transition: background-color 0.3s;
+  margin-left: 10px;
 }
 
 .btn-learn-more:hover {
